--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -9,7 +9,7 @@
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
-    "gap head head head head"
+    "head head head head head"
     "gap tombol content content gap1"
     "gap tombol content content gap1";
 }
@@ -230,4 +230,14 @@ margin-left: 1rem;
           padding-left: 10px;
           font-size: 20px;
         }
+
+a{
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+a:hover{
+  color: #2B5981  ;
+  font-size: 25px;
+}
         
